--- a/css/style.css
+++ b/css/style.css
@@ -3115,15 +3115,13 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .header_social{
   display: none !important;
 }
-#slide-3-layer-3{
-  margin-top: 0.1rem !important;
-  font-size: 16px;
-}
 #slide-1-layer-5{
 top: 0 !important;
 }
 #slide-1-layer-4{
   top: 0 !important;
+}
+.tp-parallax-wrap{
 
 }
 .header_top_inner.row .col-md-8{
@@ -3255,6 +3253,14 @@ top: 0 !important;
     padding-right: 30px;
   }
 }
+@media(min-width:543px)and(max-width:900px){
+  .slider_sm_heding#slide-3-layer-3{
+    margin-top: 2rem !important;
+    font-size: 16px;
+  }
+  
+}
+
 @media (max-width: 991px) {
   .navbar-brand img{
     width: 30% !important;
