--- a/css/style.css
+++ b/css/style.css
@@ -747,7 +747,6 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 }
 .welcome_area .welcome_content_aera .sub_p {
   color: #0077b5;
-  
   font-size: 21px;
   line-height: 31px;
   padding: 40px 0 20px;
@@ -3075,7 +3074,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
   display: none;
 }
 .scroll-top:hover, .scroll-top:focus {
-  background: #ce8506;
+  background: #0077b5;
 }
 .footer_inner a.text-dark{
   font-weight: 800;
