--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,18 @@
 // Extra Large devices (desktops, less than 1231px) 
+@media (max-width: 3000px){ 
+    .fetured_project_area .fetured_project{
+        padding-left: 15px;
+        padding-right: 15px;
+         .project .project_content{
+            padding: 45px 15px;
+        }
+    }
+    .testimonial_area .carousel-indicators{
+        right: 50px;
+        left: auto;
+        margin: 0;
+    }
+}
 @media (max-width: 1440px){ 
     .fetured_project_area .fetured_project{
         padding-left: 15px;
