--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -5,6 +5,7 @@
     padding-top: 100px;
     background: url("../images/about-shep.png") no-repeat left bottom;
     .about_company{
+        max-width: 585px;
         float: right; 
         padding-top:75px;
     }
