--- a/css/style.css
+++ b/css/style.css
@@ -3822,3 +3822,18 @@ font-size: 16px !important;
 .smrow-gap-5{
   row-gap: 2rem;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
+.container {
+  width: 100% !important;
+  padding: 0 15px;
+}
+@media (max-width: 1024px) {
+  .navbar .navbar_supported ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
