--- a/css/style.css
+++ b/css/style.css
@@ -3112,6 +3112,9 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
   }
 }
 @media (max-width: 1440px) {
+  .container{
+    max-width: 1300px;
+  }
   .fetured_project_area .fetured_project {
     padding-left: 15px;
     padding-right: 15px;
@@ -3635,13 +3638,13 @@ font-size: 16px !important;
     height: 320px;
   }
 }
-@media (max-width: 575px) {
+/* @media (max-width: 575px) {
   .main_header_area .header_menu .search_button_content .search_dropbown .dropdown-menu {
     margin-left: -43px !important;
   }
   #slide-1-layer-3{
     padding: 10px !important;
-  }
+  } */
 
   .slider_carousel .media .popup-youtube {
     width: 130px;
