--- a/css/style.css
+++ b/css/style.css
@@ -2151,8 +2151,9 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .map_area .easy_contact {
   box-shadow: 0px 0px 37px 0px rgba(156, 156, 156, 0.35);
   background: #fff;
-  max-width: 360px;
+  max-width: 500px;
   margin-left: 40px;
+  height: 530px;
 }
 .map_area .easy_contact h3 {
   border-bottom: 1px solid #eeeeee;
