--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -40,6 +40,10 @@
             }
         }
     }
+    .contact_inf_area .contact_no{
+        top:0;
+        padding-block:2rem;
+    }
     .main_header_area .header_menu{
         .navbar .navbar_supported ul{
             padding-left: 15px; 
