--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
   /* margin-bottom: 23px; */
 }
 .header_logo_area .header_logo_inner .right_info .media:nth-child(2) {
-  padding-left: 14px;
+  /* padding-left: 14px; */
 }
 .header_logo_area .header_logo_inner .right_info .media i {
   position: relative;
